Sprint 2 과제 제출